--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
                     <!-- Texto Mediano -->
                     <p>Escribe tu mensaje en el área de escritura y conviértelo en un código seguro.</p>
                     <!-- Área de Escritura -->
-                    <textarea class="form-control mb-3" placeholder="Escribe aquí"></textarea>
+                    <textarea class="form-control mb-3 glass-textarea" placeholder="Escribe aquí"></textarea>
                     <!-- Botones -->
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                        <button class="btn btn-primary me-md-2">Encriptar</button>
-                        <button class="btn btn-secondary">Descifrar</button>
+                        <button class="btn btn-outline-light me-md-2">Encriptar</button>
+                        <button class="btn btn-outline-success">Descifrar</button>
                     </div>
                 </div>
                 <!-- Columna Derecha -->
