style(): Estilos de la parte derecha
Co-Authored-By: axxving <160192346+axxving@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -53,22 +53,19 @@
                 <div class="col-md-6">
                     <!-- Cuadro Superior -->
                     <div class="bg-light p-4 mb-3">
-                        <h2>Cuadro Superior</h2>
+                        <h2>Texto encriptado</h2>
                         <!-- Contenido del Cuadro Superior -->
                     </div>
                     <!-- Cuadro Inferior -->
                     <div class="bg-light p-4">
-                        <h2>Cuadro Inferior</h2>
+                        <h2>Texto descencriptado</h2>
                         <!-- Contenido del Cuadro Inferior -->
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
-
-
-
+    
     <!-- Scroll Reveal -->
     <script src="https://unpkg.com/scrollreveal"></script>
 
