style(): Corrección de fondo
Co-Authored-By: axxving <160192346+axxving@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
     <!-- Sección con Textos y Botones -->
-    <section class="container-fluid video-background" id="encriptador">
+    <section class="container-fluid video-background pt-5 pb-5" id="encriptador">
         <video autoplay muted loop playsinline>
             <source src="/imgs/animation_-_7529 (720p).mp4" type="video/mp4">
             <!-- Agrega más formatos de video si lo necesitas para compatibilidad con navegadores -->
@@ -52,12 +52,12 @@
                 <!-- Columna Derecha -->
                 <div class="col-md-6">
                     <!-- Cuadro Superior -->
-                    <div class="bg-light p-4 mb-3">
+                    <div class="bg-light p-4 mb-3 mt-3">
                         <h2>Texto encriptado</h2>
                         <!-- Contenido del Cuadro Superior -->
                     </div>
                     <!-- Cuadro Inferior -->
-                    <div class="bg-light p-4">
+                    <div class="bg-light p-4 mb-3 mt-3">
                         <h2>Texto descencriptado</h2>
                         <!-- Contenido del Cuadro Inferior -->
                     </div>
