--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 
 <body>
 
+    <!-- Estructura de la pantalla de carga -->
+    <div class="loader-wrapper" id="loader">
+        <div class="loader"></div>
+    </div>
+
     <!-- Sección con Textos y Botones -->
     <section class="container-fluid video-background pt-5 pb-5" id="encriptador">
         <video autoplay muted loop playsinline>
