feat(): Corrección spinner
Co-Authored-By: axxving <160192346+axxving@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
     <!-- Estructura de la pantalla de carga -->
-    <div class="loader-wrapper" id="loader">
+    <div class="loader-wrapper">
         <div class="loader"></div>
     </div>
 
