--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <!-- Iconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.1/css/boxicons.min.css">
 
-    <title>Encriptador | axxving</title>
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+    <title>Encriptador | axxving</title>
+
     <link rel="stylesheet" href="/css/styles.css">
+
+    <link rel="stylesheet" href="/css/header.css">
 </head>
 
 <body>
@@ -26,6 +28,43 @@
     <!-- Estructura de la pantalla de carga -->
     <div class="loader-wrapper">
         <div class="loader"></div>
+    </div>
+
+    <div class="container-fluid" id="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <nav class="navbar navbar-expand-md">
+                        <div class="container-fluid">
+                            <a class="navbar-brand" href="#">
+                                <i class="bi bi-house-door-fill"></i> Logo
+                            </a>
+                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
+                            <div class="collapse navbar-collapse" id="navbarNav">
+                                <ul class="navbar-nav ms-auto">
+                                    <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Acerca de</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Servicios</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="#">Contacto</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Sección con Textos y Botones -->
