--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Favicon -->
+
     <link rel="shortcut icon" href="/imgs/logos/logo-transparente.png" type="image/x-icon">
 
-    <!-- Iconos -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.1/css/boxicons.min.css">
 
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
     <title>Encriptador | axxving</title>
@@ -28,7 +25,7 @@
 
 <body>
 
-    <!-- Estructura de la pantalla de carga -->
+    <!-- Pantalla de carga -->
     <div class="loader-wrapper">
         <div class="loader">
             <div></div>
@@ -36,9 +33,7 @@
         </div>
     </div>
 
-
-
-
+    <!-- Header -->
     <div class="container-fluid p-1" id="header">
         <div class="container">
             <div class="row">
@@ -57,13 +52,10 @@
                             <div class="collapse navbar-collapse" id="navbarNav">
                                 <ul class="navbar-nav ms-auto">
                                     <li class="nav-item">
-                                        <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                                        <a class="nav-link" href="#">Inicio</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">Acerca de</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="#">Servicios</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="#">Contacto</a>
@@ -77,7 +69,7 @@
         </div>
     </div>
 
-    <!-- Sección con Textos y Botones -->
+    <!-- Hero -->
     <section class="container-fluid video-background pt-5 pb-5" id="encriptador">
         <video autoplay muted loop playsinline>
             <source src="/imgs/animation_-_7529 (720p).mp4" type="video/mp4">
@@ -91,30 +83,51 @@
                     <h1 class="display-3">Encriptador de Textos</h1>
                     <!-- Texto Pequeño -->
                     <p class="lead">Protege tu información con nuestro potente encriptador de textos.</p>
+                    <!-- Select para elegir tipo de encriptación -->
+                    <select class="form-select mb-3" aria-label="Tipo de encriptación">
+                        <option selected>Selecciona tipo de encriptación</option>
+                        <option value="1">Encriptación A</option>
+                        <option value="2">Encriptación B</option>
+                        <option value="3">Encriptación C</option>
+                    </select>
                     <!-- Texto Mediano -->
                     <p>Escribe tu mensaje en el área de escritura y conviértelo en un código seguro.</p>
                     <!-- Área de Escritura -->
-                    <textarea id="inputTexto" class="form-control mb-3 glass-textarea" placeholder="Escribe aquí"
-                        pattern="[a-z]+" oninput="validarTexto()"></textarea>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text"><i class="bi bi-pencil-fill"></i></span>
+                        <input id="inputTexto" class="form-control glass-textarea" placeholder="Escribe aquí"
+                            pattern="[a-z]+" oninput="validarTexto()"></input>
+                    </div>
+
                     <!-- Botones -->
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <button id="btnEncriptar" class="btn btn-outline-light me-md-2">Encriptar</button>
                         <button id="btnDescifrar" class="btn btn-outline-success">Descifrar</button>
                     </div>
                 </div>
+
                 <!-- Columna Derecha -->
                 <div class="col-md-6">
                     <!-- Cuadro Superior -->
-                    <div id="cuadroEncriptado" class="bg-light p-4 mb-3 mt-3">
-                        <h2>Texto encriptado</h2>
+                    <div id="cuadroEncriptado" class="card bg-light p-4 mb-3 mt-3">
+                        <h2 class="card-title">Texto encriptado</h2>
                         <!-- Contenido del Cuadro Superior -->
+                        <input id="textoEncriptado" class="form-control mb-3 glass-textarea" readonly></input>
                     </div>
                     <!-- Cuadro Inferior -->
-                    <div id="cuadroDescencriptado" class="bg-light p-4 mb-3 mt-3">
-                        <h2>Texto descencriptado</h2>
+                    <div id="cuadroDescencriptado" class="card bg-light p-4 mb-3">
+                        <h2 class="card-title">Texto descifrado</h2>
                         <!-- Contenido del Cuadro Inferior -->
+                        <input id="textoDescencriptado" class="form-control mb-3 glass-textarea" readonly></input>
+                    </div>
+                    <!-- Input con icono de copiar y pegar -->
+                    <div class="input-group mb-3">
+                        <span class="input-group-text bg-light"><i class="bi bi-clipboard"></i></span>
+                        <input type="text" class="form-control" placeholder="Texto a copiar/pegar"
+                            aria-label="Texto a copiar/pegar">
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -146,17 +159,8 @@
         </div>
     </div>
 
-
-
-
-    <!-- Scroll Reveal -->
-    <script src="https://unpkg.com/scrollreveal"></script>
-
-    <!-- Bootstrap Bundle JS (popper.js incluido) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Boxicons -->
-    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
     <script src="/js/main.js"></script>
 </body>
 
