--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
 
     <link rel="stylesheet" href="/css/header.css">
 
+    <link rel="stylesheet" href="/css/encriptador.css">
+
     <link rel="stylesheet" href="/css/spinner.css">
+
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 
 <body>
@@ -129,7 +133,27 @@
                 </div>
             </div>
         </div>
+
     </section>
+
+    <footer class="container-fluid mt-1" id="footer">
+        <div class="container">
+            <div class="row d-flex justify-content-center justify-content-md-between align-items-center">
+                <div class="col-md-6 col-12 mt-1 text-center text-md-start">
+                    <p class="text-white">&copy; 2024. Todos los derechos reservados.</p>
+                </div>
+                <div class="col-md-6 col-12 d-flex justify-content-center justify-content-md-end gap-2">
+                    <a href="#" class="me-2 text-white"><i class="bi bix bi-github"></i></a>
+                    <a href="#" class="me-2 text-white"><i class="bi bix bi-instagram"></i></a>
+                    <a href="#" class="text-white"><i class="bi bix bi-linkedin"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
+
+
+
 
     <!-- Modal de Advertencia -->
     <div class="modal fade" id="modalAdvertencia" tabindex="-1" aria-labelledby="modalAdvertenciaLabel"
