--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <div class="container">
             <div class="row d-flex justify-content-center justify-content-md-between align-items-center">
                 <div class="col-md-6 col-12 mt-1 text-center text-md-start">
-                    <p class="text-white">&copy; 2024. Todos los derechos reservados.</p>
+                    <p class="text-white small">&copy; 2024. Todos los derechos reservados.</p>
                 </div>
                 <div class="col-md-6 col-12 d-flex justify-content-center justify-content-md-end gap-2">
                     <a href="#" class="me-2 text-white"><i class="bi bix bi-github"></i></a>
@@ -150,10 +150,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
 
     <!-- Modal de Advertencia -->
     <div class="modal fade" id="modalAdvertencia" tabindex="-1" aria-labelledby="modalAdvertenciaLabel"
